--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Receitas</title>
 </head>
 
 <body>
     <div id="page">
-        <img src="" alt="">
+        <img src="assets/main.jpg" alt="">
         <main>
             <section id="about">
                 <h1>Cupcake com cafe com chantilly</h1>
