--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html lang="pt-br">
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Alice&display=swap" rel="stylesheet">
+
     <title>Receitas</title>
 </head>
 
 <body>
     <div id="page">
-        <img src="assets/main.jpg" alt="">
+        <img src="assets/pexels-pixabay-268364.jpg" alt="">
         <main>
             <section id="about">
                 <h1>Cupcake com cafe com chantilly</h1>
